# bevy_game_grid

./: Cargo.toml
assets/data/: level.json  structures.json
src/: assetLoader.rs  asset_loader.rs  camera.rs  debug.rs  grid.rs  inputs.rs  lib.rs  main.rs  modules.rs  movement.rs  ore.rs  player.rs  plugin_groups.rs  prelude.rs  schedule.rs  state.rs  structures.rs  structures_combat.rs  utils.rs
src/configs/: config.rs  mod.rs  prelude.rs
src/core/: asset_loader.rs  inputs.rs  mod.rs  prelude.rs  schedule.rs
src/gameplay/: mod.rs  movement.rs  prelude.rs  structures_combat.rs
src/ui/: camera.rs  damage.rs  mod.rs  prelude.rs
src/world/: grid.rs  mod.rs  modules.rs  ore.rs  player.rs  prelude.rs  structures.rs
