[package]
name = "my_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1", features = ["dynamic_linking"] }
avian2d = "0.1"
iyes_perf_ui = "0.3.0"
bevy_common_assets = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
